--- a/about/index.html
+++ b/about/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="main">
+      
       <h1>Eat.Sleep.Develop</h1>
 
 <p>My name is David Petersen. I live in Rainy Corvallis Oregon. I enjoy soccer, traveling, and cooking.</p>
@@ -24,7 +25,8 @@
     <div id="sidebar">
       <h2 id="logo"><a href="/">David Petersen</a></h2>
       <ul>
-        <li><a href="/about">About</a></li>
+        <li><a href="/about/">About</a></li>
+        <li><a href="/blog/">Blog</a></li>
       </ul>
     </div>
   </body>
