--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>David Petersen - Home</title>
+    <title>David Petersen - Contact</title>
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/coderay.css" media="screen">
     <link href="http://fonts.googleapis.com/css?family=Damion" rel="stylesheet" type="text/css">
@@ -11,9 +11,7 @@
   <body>
     <div id="main">
       
-      <h2>Hi!</h2>
-
-<p>My name is David Petersen. I'm the founder of <a href="http://www.ridezap.com">RideZap</a>.</p>
+      <p>Feel free to email me at dpcontacter@gmail.com</p>
     </div>
     <div id="sidebar">
       <h2 id="logo"><a href="/">David Petersen</a></h2>
