Fixing outputted code

--- a/projects/index.html
+++ b/projects/index.html
@@ -12,6 +12,8 @@
     <div id="main">
       
       <p>This is some of the projects that I have worked on.</p>
+
+
     </div>
     <div id="sidebar">
       <h2 id="logo"><a href="/">David Petersen</a></h2>
@@ -20,8 +22,9 @@
         <li><a href="/about/">About</a></li>
         <li><a href="/projects/">Projects</a></li>
         <li><a href="/playground/">Playground</a></li>
-        <li><a href="/contact/">Contact</a></li>
       </ul>
+      <span><a href="mailto:dpcontacter@gmail.com">dpcontacter@gmail.com</a></span>
+      <span>541-203-0228</span>
     </div>
   </body>
 </html>
