--- a/about/index.html
+++ b/about/index.html
@@ -19,9 +19,9 @@
 
 <p>I have found that web is a means of creative outlet for me. I started learning HTML and CSS several years ago and have just been recently introduced to Ruby on Rails and Django. Both of these frameworks have turned out to be an excellent means of turning ideas quickly into reality. This is what I have found myself to being truely passionate about, being able to find a problem with the world and try to address it using technology. I have began to enjoy working more with Ruby on Rails, but I also work with Django for work. I don't feel tightly bound to one programming language or another, I am somewhat of a language agnostic, even though I do tend to drift toward python for most scripting projects.</p>
 
-<p>This website will serve as a outlet for my portfolio and my thoughs on programming. I am also open to work as a freelancer on your next project. My contact information is available through the contact section of this site.</p>
+<p>This website will serve as a outlet for my portfolio and my thoughs on programming. I am also open to work as a freelancer on your next project.</p>
 
-<img id="profile_pic" class="framed_pic" src="/me.jpg"/>
+<img class="framed_pic" src="/assets/images/me.jpg"/>
     </div>
     <div id="sidebar">
       <h2 id="logo"><a href="/">David Petersen</a></h2>
@@ -30,8 +30,9 @@
         <li><a href="/about/">About</a></li>
         <li><a href="/projects/">Projects</a></li>
         <li><a href="/playground/">Playground</a></li>
-        <li><a href="/contact/">Contact</a></li>
       </ul>
+      <span><a href="mailto:dpcontacter@gmail.com">dpcontacter@gmail.com</a></span>
+      <span>541-203-0228</span>
     </div>
   </body>
 </html>
