--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
   <body>
     <div id="main">
       
-      <h2>Hi!</h2>
+      <h2>I create applications on the web.</h2>
 
-<p>My name is David Petersen. I'm the founder of <a href="http://www.ridezap.com">RideZap</a>.</p>
+<p>Right now my main focus is <a href="http://www.ridezap.com">RideZap</a>.</p>
+
+<img class="framed_pic" src="/assets/images/dmca-thumb.png"/>
+<img class="framed_pic" src="/assets/images/ridezap-thumb.png"/>
+<img class="framed_pic" src="/assets/images/classes-thumb.png"/>
     </div>
     <div id="sidebar">
       <h2 id="logo"><a href="/">David Petersen</a></h2>
@@ -22,8 +26,9 @@
         <li><a href="/about/">About</a></li>
         <li><a href="/projects/">Projects</a></li>
         <li><a href="/playground/">Playground</a></li>
-        <li><a href="/contact/">Contact</a></li>
       </ul>
+      <span><a href="mailto:dpcontacter@gmail.com">dpcontacter@gmail.com</a></span>
+      <span>541-203-0228</span>
     </div>
   </body>
 </html>
