--- a/playground/index.html
+++ b/playground/index.html
@@ -20,8 +20,9 @@
         <li><a href="/about/">About</a></li>
         <li><a href="/projects/">Projects</a></li>
         <li><a href="/playground/">Playground</a></li>
-        <li><a href="/contact/">Contact</a></li>
       </ul>
+      <span><a href="mailto:dpcontacter@gmail.com">dpcontacter@gmail.com</a></span>
+      <span>541-203-0228</span>
     </div>
   </body>
 </html>
