Improving landing page

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
       
       <h2>I create applications on the web.</h2>
 
-<p>Right now my main focus is <a href="http://www.ridezap.com">RideZap</a>.</p>
-
 <img class="framed_pic" src="/assets/images/dmca-thumb.png"/>
 <img class="framed_pic" src="/assets/images/ridezap-thumb.png"/>
 <img class="framed_pic" src="/assets/images/classes-thumb.png"/>
+<img class="framed_pic" src="/assets/images/lug-thumb.png"/>
+
+<p>Right now my main focus is <a href="http://www.ridezap.com">RideZap</a>.</p>
     </div>
     <div id="sidebar">
       <h2 id="logo"><a href="/">David Petersen</a></h2>
