Improving projects page

--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
       
       <h1>Eat.Sleep.Develop</h1>
 
-<p>My name is David Petersen. I live in Rainy Corvallis Oregon. I enjoy soccer, traveling, and cooking.</p>
+<p>My name is David Petersen. I live in rainy Corvallis Oregon. I enjoy soccer, traveling, and cooking.</p>
 
 <p>I love to dream about traveling, learning, and creating. I was fortunate enough to be able to spend the last year in France traveling and working. The chance to live in Paris for 6 months was truely eye opening for me. I had never been in a city that had a heartbeat of its own. Adjusting to a new culture was a wonderful experience for me. I fell in love with the food, <i>l'art de vivre</i>, and was fortunate to bring back a girlfriend as well.</p>
 
