Updating projects page

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       
       <h2>I create applications on the web.</h2>
 
-<img class="framed_pic" src="/assets/images/dmca-thumb.png"/>
-<img class="framed_pic" src="/assets/images/ridezap-thumb.png"/>
-<img class="framed_pic" src="/assets/images/classes-thumb.png"/>
-<img class="framed_pic" src="/assets/images/lug-thumb.png"/>
+<a href="/projects/dmca_management.html"><img class="framed_pic" src="/assets/images/dmca-thumb.png"/></a>
+<a href="/projects/ridezap.html"><img class="framed_pic" src="/assets/images/ridezap-thumb.png"/></a>
+<a href="/projects/oregon_state_lug.html"><img class="framed_pic" src="/assets/images/classes-thumb.png"/></a>
+<a href="/projects/oregon_state_lug.html"><img class="framed_pic" src="/assets/images/lug-thumb.png"/></a>
 
 <p>Right now my main focus is <a href="http://www.ridezap.com">RideZap</a>.</p>
     </div>
