--- a/projects/dmca_management.html
+++ b/projects/dmca_management.html
@@ -15,11 +15,12 @@
 
 
 
-  <p>A frontend to manage students at Oregon State who reported to have been caught filesharing.</p>
+
+  <p>This is a project that I started for when I was working for network services at Oregon State University. They needed wanted a frontend to help manage student accounts who had been caught downloading on the school network</p><p>I ended up creating the frontend using Django. The backend ended up working with different school systems that managed student accounts.</a>
+  <br/>
 
 
 <img class="framed_pic" src="/assets/images/dmca-thumb.png" />
-<br/>
 
       
       
