--- a/projects/oregon_state_lug.html
+++ b/projects/oregon_state_lug.html
@@ -14,14 +14,16 @@
         <h2>Oregon State LUG</h2>
 
 
+  <br/>
   URL: <span><a href="http://lug.oregonstate.edu">http://lug.oregonstate.edu</a></span>
 
 
-  <p>Simple redesign of Drupal theme for the Oregon State Linux Users Group.</p>
+
+  <p>During the Spring term of 2011 the Oregon State Linux Users group upgraded their Drupal install wiping out the old theme. I stepped in to perform some emergancy surgery on the site and restore it to something other than the default drupal theme.</p>
+  <br/>
 
 
 <img class="framed_pic" src="/assets/images/lug-thumb.png" />
-<br/>
 
       
       
