--- a/projects/ridezap.html
+++ b/projects/ridezap.html
@@ -14,14 +14,16 @@
         <h2>RideZap</h2>
 
 
+  <br/>
   URL: <span><a href="http://www.ridezap.com">http://www.ridezap.com</a></span>
 
 
-  <p>Ridesharing website in order to make moving between cities and sharing the cost of gas easier.</p>
+
+  <p>After spending a year in France, I missed the website <a href="http://www.covoiturage.fr">Covoiturage</a>. This website made it much easier to move between cities and organize rides. I couldn't find a US equivalent at the time, and with my girlfriend living in another city I decided to make my own. This set off a multi-month project where I built RideZap.</p><p>RideZap is written in Ruby on Rails and much of the frontend interaction is handled with the Jquery library.</p>
+  <br/>
 
 
 <img class="framed_pic" src="/assets/images/ridezap-thumb.png" />
-<br/>
 
       
       
