--- a/playground/index.html
+++ b/playground/index.html
@@ -12,6 +12,9 @@
     <div id="main">
       
       <p>This will be index of different fun projects I am playing with.</p>
+
+    <h3><a href="/playground/facebook_playlister.html">Facebook Playlister</a></h3>
+
     </div>
     <div id="sidebar">
       <h2 id="logo"><a href="/">David Petersen</a></h2>
