Working on facebook app

--- a/playground/facebook_playlister.html
+++ b/playground/facebook_playlister.html
@@ -24,9 +24,27 @@
       cookie     : true, // enable cookies to allow the server to access the session
       oauth      : true, // enable OAuth 2.0
       xfbml      : true  // parse XFBML
+
     });
 
     // Additional initialization code here
+    FB.login(function(response) {
+      if (response.authResponse) {
+        console.log('Welcome!  Fetching your information.... ');
+        FB.api('/me', function(response) {
+          console.log('Good to see you, ' + response.name + '.');
+          FB.logout(function(response) {
+            console.log('Logged out.');
+          });
+        });
+      } else {
+        console.log('User cancelled login or did not fully authorize.');
+      }
+    }, {scope: 'email'});
+
+    FB.api('/me', function(response) {
+      alert(response.name);
+    });
   };
 
   // Load the SDK Asynchronously
@@ -36,23 +54,6 @@
      js.src = "//connect.facebook.net/en_US/all.js";
      d.getElementsByTagName('head')[0].appendChild(js);
    }(document));
-</script>
-<script>
-window.onload = function() {
- FB.login(function(response) {
-   if (response.authResponse) {
-     console.log('Welcome!  Fetching your information.... ');
-     FB.api('/me', function(response) {
-       console.log('Good to see you, ' + response.name + '.');
-       FB.logout(function(response) {
-         console.log('Logged out.');
-       });
-     });
-   } else {
-     console.log('User cancelled login or did not fully authorize.');
-   }
- }, {scope: 'email'});
-};
 </script>
     </div>
     <div id="sidebar">
