--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>David Petersen - Home</title>
+    <title>David Petersen - </title>
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/coderay.css" media="screen">
     <link href="http://fonts.googleapis.com/css?family=Damion" rel="stylesheet" type="text/css">
@@ -12,14 +12,10 @@
   <body>
     <div id="main">
       
-      <h2>I create applications on the web.</h2>
+      <p>I am available to help you on any web work you would like to get done</p>
+<p>Email: <a href="mailto:dpcontacter@gmail.com">dpcontacter@gmail.com</a></p>
+<p>Phone: 541-203-0228</p>
 
-<a href="/projects/dmca_management.html"><img class="framed_pic" src="/assets/images/dmca-thumb.png"/></a>
-<a href="/projects/ridezap.html"><img class="framed_pic" src="/assets/images/ridezap-thumb.png"/></a>
-<a href="/projects/oregon_state_lug.html"><img class="framed_pic" src="/assets/images/classes-thumb.png"/></a>
-<a href="/projects/oregon_state_lug.html"><img class="framed_pic" src="/assets/images/lug-thumb.png"/></a>
-
-<p>Right now my main focus is <a href="http://www.ridezap.com">RideZap</a>.</p>
     </div>
     <div id="sidebar">
       <h2 id="logo"><a href="/">David Petersen</a></h2>
