Fix project index

--- a/playground/index.html
+++ b/playground/index.html
@@ -12,9 +12,9 @@
   <body>
     <div id="main">
       
-      <p>This will be index of different fun projects I am playing with.</p>
-
+      
     <h3><a href="/playground/facebook_playlister.html">Facebook Playlister</a></h3>
+    <p>This is a fun little tool that compiles youtube videos on a specific Facebook friends wall into a playlist.</p>
 
     </div>
     <div id="sidebar">
