Proof of concept game idea

--- a/playground/index.html
+++ b/playground/index.html
@@ -13,6 +13,9 @@
     <div id="main">
       
       
+    <h3><a href="/playground/google_image_langauge_game.html">Google Image Langauge Game</a></h3>
+    <p>A little language game I am working on to play with the Google Image API.</p>
+
     <h3><a href="/playground/facebook_playlister.html">Facebook Playlister</a></h3>
     <p>This is a fun little tool that compiles youtube videos on a specific Facebook friends wall into a playlist.</p>
 
