--- a/presentations/index.html
+++ b/presentations/index.html
@@ -13,7 +13,7 @@
     <div id="main">
       
       
-    <h3><a href="/presentations/screen_scraping/">Gentle Caresses for a Wild Web</a></h3>
+    <h3><a href="/presentations/screen_scraping/">Gentle Caresses on a Wild Web</a></h3>
     <p>Presentation on scraping the web into useful APIs and tools.</p>
 
     </div>
