--- a/playground/index.html
+++ b/playground/index.html
@@ -13,7 +13,7 @@
     <div id="main">
       
       
-    <h3><a href="/playground/google_image_langauge_game.html">Google Image Langauge Game</a></h3>
+    <h3><a href="/playground/google_image_language_game.html">Google Image Language Game</a></h3>
     <p>A little language game I am working on to play with the Google Image API.</p>
 
     <h3><a href="/playground/facebook_playlister.html">Facebook Playlister</a></h3>
