--- a/presentations/screen_scraping/index.html
+++ b/presentations/screen_scraping/index.html
@@ -261,7 +261,7 @@
     </h1>
   </div>
 </section><section class="slide" id="slide42" style="background: #8E4034"><div class="container">
-    <h1 class="center" style="color: #5B756F">
+    <h1 class="center" style="color: white">
       Question and Answer.
     </h1>
   </div>
