--- a/presentations/screen_scraping/index.html
+++ b/presentations/screen_scraping/index.html
@@ -41,9 +41,11 @@
       Be a Dwarf not an Elf
     </h1>
     <h2 style="color:#EAF6F8; text-align:center">
-      email: davjpetersen@github.com
+      email: davjpetersen@gmail.com
       <br>
       irc: thedjpetersen
+      <br>
+      website: thedjpetersen.github.com
     </h2>
   </div>
 </section><section class="slide" id="slide2" style="background: #CCCCCC"><img alt="Dwarf" src="http://images.wikia.com/lotr/images/4/43/Gimli.jpg" style="height: 100%; padding-left:250px"></section><section class="slide" id="slide3" style="background: #446699"><img alt="Elf" src="http://images.cheezburger.com/completestore/2009/11/20/129032519752041524.jpg" style="height: 100%; padding-left:250px"></section><section class="slide" id="slide4"><img alt="Rainy Corvallis" src="http://anithajith.files.wordpress.com/2011/05/rain-wallpaper.jpg" style="height: 100%; width: 100%"></section><section class="slide" id="slide5" style="background: #D85A1A"><div class="container" style="padding-top:30px">
