Re-doing url structure

--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@
       
       
     <div style="height:250px">
-    <h3><a href="/projects/oregon_state_registration_api.html">Oregon State Registration API</a></h3>
+    <h3><a href="/projects/reglib/">Oregon State Registration API</a></h3>
     <div style="float:right; margin-left:30px;">
       <img class="framed_pic" src="/assets/images/classes-thumb.png" />
     </div>
@@ -27,7 +27,7 @@
   </div>
 
     <div style="height:250px">
-    <h3><a href="/projects/oregon_state_lug.html">Oregon State LUG</a></h3>
+    <h3><a href="/projects/lug/">Oregon State LUG</a></h3>
     <div style="float:right; margin-left:30px;">
       <img class="framed_pic" src="/assets/images/lug-thumb.png" />
     </div>
@@ -40,7 +40,7 @@
   </div>
 
     <div style="height:250px">
-    <h3><a href="/projects/ridezap.html">RideZap</a></h3>
+    <h3><a href="/projects/ridezap/">RideZap</a></h3>
     <div style="float:right; margin-left:30px;">
       <img class="framed_pic" src="/assets/images/ridezap-thumb.png" />
     </div>
@@ -53,7 +53,7 @@
   </div>
 
     <div style="height:250px">
-    <h3><a href="/projects/dmca_management.html">DMCA management</a></h3>
+    <h3><a href="/projects/dmca/">DMCA management</a></h3>
     <div style="float:right; margin-left:30px;">
       <img class="framed_pic" src="/assets/images/dmca-thumb.png" />
     </div>
