--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       
       <h2>I create applications on the web.</h2>
 
-<a href="/projects/dmca_management.html"><img class="framed_pic" src="/assets/images/dmca-thumb.png"/></a>
-<a href="/projects/ridezap.html"><img class="framed_pic" src="/assets/images/ridezap-thumb.png"/></a>
-<a href="/projects/oregon_state_lug.html"><img class="framed_pic" src="/assets/images/classes-thumb.png"/></a>
-<a href="/projects/oregon_state_lug.html"><img class="framed_pic" src="/assets/images/lug-thumb.png"/></a>
+<a href="/projects/dmca/"><img class="framed_pic" src="/assets/images/dmca-thumb.png"/></a>
+<a href="/projects/ridezap/"><img class="framed_pic" src="/assets/images/ridezap-thumb.png"/></a>
+<a href="/projects/reglib/"><img class="framed_pic" src="/assets/images/classes-thumb.png"/></a>
+<a href="/projects/lug/"><img class="framed_pic" src="/assets/images/lug-thumb.png"/></a>
 
 <p>Right now my main focus is <a href="http://www.ridezap.com">RideZap</a>.</p>
     </div>
