--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,9 @@
 <img class="framed_pic" src="/assets/images/me.jpg"/>
     </div>
     <div id="sidebar">
-      <h2 id="logo"><a href="/">David Petersen</a></h2>
+      <h2 id="logo">
+        <a href="/">David Petersen</a>
+      </h2>
       <ul>
         <li><a href="/blog/">Blog</a></li>
         <li><a href="/about/">About</a></li>
@@ -34,6 +36,7 @@
         <li><a href="/presentations/">Presentations</a></li>
         <li><a href="/contact/">Contact</a></li>
       </ul>
+      <div id="edge"></div>
     </div>
   <script type="text/javascript">
 
