--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 <p>Right now my main focus is <a href="http://www.ridezap.com">RideZap</a>.</p>
     </div>
     <div id="sidebar">
-      <h2 id="logo"><a href="/">David Petersen</a></h2>
+      <h2 id="logo">
+        <a href="/">David Petersen</a>
+      </h2>
       <ul>
         <li><a href="/blog/">Blog</a></li>
         <li><a href="/about/">About</a></li>
@@ -31,6 +33,7 @@
         <li><a href="/presentations/">Presentations</a></li>
         <li><a href="/contact/">Contact</a></li>
       </ul>
+      <div id="edge"></div>
     </div>
   <script type="text/javascript">
 
