--- a/presentations/index.html
+++ b/presentations/index.html
@@ -18,7 +18,9 @@
 
     </div>
     <div id="sidebar">
-      <h2 id="logo"><a href="/">David Petersen</a></h2>
+      <h2 id="logo">
+        <a href="/">David Petersen</a>
+      </h2>
       <ul>
         <li><a href="/blog/">Blog</a></li>
         <li><a href="/about/">About</a></li>
@@ -27,6 +29,7 @@
         <li><a href="/presentations/">Presentations</a></li>
         <li><a href="/contact/">Contact</a></li>
       </ul>
+      <div id="edge"></div>
     </div>
   <script type="text/javascript">
 
