Updating front page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,33 @@
 <a href="/projects/reglib/"><img class="framed_pic" src="/assets/images/classes-thumb.png"/></a>
 <a href="/projects/lug/"><img class="framed_pic" src="/assets/images/lug-thumb.png"/></a>
 
-<p>Right now my main focus is <a href="http://www.ridezap.com">RideZap</a>.</p>
+<div>
+  <p>Right now my main focus is working for <a href="http://emberex.com/">Emberex</a>.
+  I also spent time building <a href="http://www.ridezap.com">RideZap</a> and <a href="https://github.com/thedjpetersen/subway">Subway</a>.
+</div>
+<div class="half_page pull_left">
+  <h3>Recent Thoughts</h3>
+  
+    <div style="margin-bottom: 5px"><a href="/blog/comparing_webchat_options/">Comparing web chat clients</a></div>
+  
+    <div style="margin-bottom: 5px"><a href="/blog/static_web_frameworks/">Comparing Static Web Frameworks</a></div>
+  
+    <div style="margin-bottom: 5px"><a href="/blog/november_dreaming/">Dreaming the November 2011 edition</a></div>
+  
+    <div style="margin-bottom: 5px"><a href="/blog/opensource_ridezap/">Open sourcing Ridezap</a></div>
+  
+    <div style="margin-bottom: 5px"><a href="/blog/startup_school/">A recap of my time at Startup School 2011</a></div>
+  
+</div>
+<div class="half_page pull_left">
+  <h3>Where to find me</h3>
+  <div>
+    <a href="http://www.twitter.com/thedjpetersen">Twitter</a>
+  </div>
+  <div>
+    <a href="http://www.github.com/thedjpetersen">GitHub</a>
+  </div>
+</div>
     </div>
     <div id="sidebar">
       <h2 id="logo">
