--- a/playground/facebook_music/index.html
+++ b/playground/facebook_music/index.html
@@ -5,6 +5,8 @@
     <title>David Petersen - Facebook Playlister</title>
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/coderay.css" media="screen">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Damion" rel="stylesheet" type="text/css">
     
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/smoothness/jquery-ui.css" type="text/css" rel="Stylesheet" />
@@ -39,13 +41,23 @@
         <a href="/">David Petersen</a>
       </h2>
       <ul>
-        <li><a href="/blog/">Blog</a></li>
-        <li><a href="/about/">About</a></li>
-        <li><a href="/projects/">Projects</a></li>
-        <li><a href="/playground/">Playground</a></li>
-        <li><a href="/presentations/">Presentations</a></li>
-        <li><a href="/contact/">Contact</a></li>
+        <li><h3>&Agrave; la carte</h3></li>
+        <li id="blog"><a href="/blog/">Blog</a></li>
+        <li id="about"><a href="/about/">About</a></li>
+        <li id="projects"><a href="/projects/">Projects</a></li>
+        <li id="playground"><a href="/playground/">Playground</a></li>
+        <li id="presentations"><a href="/presentations/">Presentations</a></li>
+        <li id="contact"><a href="/contact/">Contact</a></li>
       </ul>
+      <div id="social">
+        <a href="http://www.github.com/thedjpetersen">
+          <img src="/assets/images/github.png"></img>
+        </a>
+        <a href="http://www.twitter.com/thedjpetersen">
+          <img src="/assets/images/twitter.png"></img>
+        </a>
+      </div>
+
       <div id="edge"></div>
     </div>
   <script type="text/javascript">
