--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/coderay.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="http://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Damion" rel="stylesheet" type="text/css">
     
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/home.css" media="screen">
 
@@ -31,11 +30,47 @@
   <a href="/projects/dmca/"><img class="framed_pic" src="/assets/images/dmca-thumb.png"/></a>
   <a href="/projects/ridezap/"><img class="framed_pic" src="/assets/images/ridezap-thumb.png"/></a>
   <a href="/projects/reglib/"><img class="framed_pic" src="/assets/images/classes-thumb.png"/></a>
-  <a href="/projects/lug/"><img class="framed_pic" src="/assets/images/lug-thumb.png"/></a>
+  <a href="/projects/subway/"><img class="framed_pic" src="/assets/images/subway-thumb.png"/></a>
 </div>
 
 <div class="section">
   <h2 style="margin-bottom: 20px">Recent Thoughts</h2>
+  
+    <div class="blogpost">
+      <div class="blogdate">
+        <span>Jul 24</span>
+      </div>
+      <div class="blogtitle">
+        <a href="/blog/premature_optimization/">Being performance minded while avoiding premature optimization</a>
+      </div>
+    </div>
+  
+    <div class="blogpost">
+      <div class="blogdate">
+        <span>Jul 24</span>
+      </div>
+      <div class="blogtitle">
+        <a href="/blog/november_dreaming/">Dreaming the November 2011 edition</a>
+      </div>
+    </div>
+  
+    <div class="blogpost">
+      <div class="blogdate">
+        <span>Jul 11</span>
+      </div>
+      <div class="blogtitle">
+        <a href="/blog/opensource_ridezap/">Open sourcing Ridezap</a>
+      </div>
+    </div>
+  
+    <div class="blogpost">
+      <div class="blogdate">
+        <span>Jul 11</span>
+      </div>
+      <div class="blogtitle">
+        <a href="/blog/startup_school/">A recap of my time at Startup School 2011</a>
+      </div>
+    </div>
   
     <div class="blogpost">
       <div class="blogdate">
@@ -46,47 +81,14 @@
       </div>
     </div>
   
-    <div class="blogpost">
-      <div class="blogdate">
-        <span>Jan 9</span>
-      </div>
-      <div class="blogtitle">
-        <a href="/blog/static_web_frameworks/">Comparing Static Web Frameworks</a>
-      </div>
-    </div>
-  
-    <div class="blogpost">
-      <div class="blogdate">
-        <span>Nov 15</span>
-      </div>
-      <div class="blogtitle">
-        <a href="/blog/november_dreaming/">Dreaming the November 2011 edition</a>
-      </div>
-    </div>
-  
-    <div class="blogpost">
-      <div class="blogdate">
-        <span>Nov 5</span>
-      </div>
-      <div class="blogtitle">
-        <a href="/blog/opensource_ridezap/">Open sourcing Ridezap</a>
-      </div>
-    </div>
-  
-    <div class="blogpost">
-      <div class="blogdate">
-        <span>Nov 1</span>
-      </div>
-      <div class="blogtitle">
-        <a href="/blog/startup_school/">A recap of my time at Startup School 2011</a>
-      </div>
-    </div>
-  
 </div>
+      
     </div>
     <div id="sidebar">
       <h2 id="logo">
-        <a href="/">David Petersen</a>
+        <a href="/">
+          <img src="/assets/images/logo.png">
+        </a>
       </h2>
       <ul>
         <li><h3>&Agrave; la carte</h3></li>
