--- a/playground/facebook_music/index.html
+++ b/playground/facebook_music/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/coderay.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="http://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Damion" rel="stylesheet" type="text/css">
     
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/smoothness/jquery-ui.css" type="text/css" rel="Stylesheet" />
 
@@ -35,10 +34,13 @@
 
 
 
+      
     </div>
     <div id="sidebar">
       <h2 id="logo">
-        <a href="/">David Petersen</a>
+        <a href="/">
+          <img src="/assets/images/logo.png">
+        </a>
       </h2>
       <ul>
         <li><h3>&Agrave; la carte</h3></li>
