--- a/index.html
+++ b/index.html
@@ -56,28 +56,28 @@
   
     <div class="blogpost">
       <div class="blogdate">
-        <span>Jul 11</span>
-      </div>
-      <div class="blogtitle">
-        <a href="/blog/opensource_ridezap/">Open sourcing Ridezap</a>
-      </div>
-    </div>
-  
-    <div class="blogpost">
-      <div class="blogdate">
-        <span>Jul 11</span>
-      </div>
-      <div class="blogtitle">
-        <a href="/blog/startup_school/">A recap of my time at Startup School 2011</a>
-      </div>
-    </div>
-  
-    <div class="blogpost">
-      <div class="blogdate">
         <span>Jun 4</span>
       </div>
       <div class="blogtitle">
         <a href="/blog/comparing_webchat_options/">Comparing web chat clients</a>
+      </div>
+    </div>
+  
+    <div class="blogpost">
+      <div class="blogdate">
+        <span>Jan 9</span>
+      </div>
+      <div class="blogtitle">
+        <a href="/blog/static_web_frameworks/">Comparing Static Web Frameworks</a>
+      </div>
+    </div>
+  
+    <div class="blogpost">
+      <div class="blogdate">
+        <span>Nov 5</span>
+      </div>
+      <div class="blogtitle">
+        <a href="/blog/opensource_ridezap/">Open sourcing Ridezap</a>
       </div>
     </div>
   
