Work on projects on the front page

--- a/index.html
+++ b/index.html
@@ -27,10 +27,44 @@
 <div class="section">
   <h2>Here is some of my work</h2>
 
-  <a href="/projects/dmca/"><img class="framed_pic" src="/assets/images/dmca-thumb.png"/></a>
-  <a href="/projects/ridezap/"><img class="framed_pic" src="/assets/images/ridezap-thumb.png"/></a>
-  <a href="/projects/reglib/"><img class="framed_pic" src="/assets/images/classes-thumb.png"/></a>
-  <a href="/projects/subway/"><img class="framed_pic" src="/assets/images/subway-thumb.png"/></a>
+  <div class="thumbnails">
+    <div class="thumbnail">
+      <a href="/projects/dmca/">
+        <div class="overlay">
+          <span><h3>DMCA</h3></span>
+        </div>
+
+        <img class="framed_pic" src="/assets/images/dmca-thumb.png"/>
+      </a>
+    </div>
+
+    <div class="thumbnail">
+      <a href="/projects/ridezap/">
+        <div class="overlay">
+          <span><h3>RideZap</h3></span>
+        </div>
+        <img class="framed_pic" src="/assets/images/ridezap-thumb.png"/>
+      </a>
+    </div>
+
+    <div class="thumbnail">
+      <a href="/projects/reglib/">
+        <div class="overlay">
+          <span><h3>Reglib</h3></span>
+        </div>
+        <img class="framed_pic" src="/assets/images/classes-thumb.png"/>
+      </a>
+    </div>
+
+    <div class="thumbnail">
+      <a href="/projects/subway/">
+        <div class="overlay">
+          <span><h3>Subway</h3></span>
+        </div>
+        <img class="framed_pic" src="/assets/images/subway-thumb.png"/>
+      </a>
+    </div>
+  </div>
 </div>
 
 <div class="section">
@@ -56,28 +90,28 @@
   
     <div class="blogpost">
       <div class="blogdate">
+        <span>Jul 11</span>
+      </div>
+      <div class="blogtitle">
+        <a href="/blog/opensource_ridezap/">Open sourcing Ridezap</a>
+      </div>
+    </div>
+  
+    <div class="blogpost">
+      <div class="blogdate">
+        <span>Jul 11</span>
+      </div>
+      <div class="blogtitle">
+        <a href="/blog/startup_school/">A recap of my time at Startup School 2011</a>
+      </div>
+    </div>
+  
+    <div class="blogpost">
+      <div class="blogdate">
         <span>Jun 4</span>
       </div>
       <div class="blogtitle">
         <a href="/blog/comparing_webchat_options/">Comparing web chat clients</a>
-      </div>
-    </div>
-  
-    <div class="blogpost">
-      <div class="blogdate">
-        <span>Jan 9</span>
-      </div>
-      <div class="blogtitle">
-        <a href="/blog/static_web_frameworks/">Comparing Static Web Frameworks</a>
-      </div>
-    </div>
-  
-    <div class="blogpost">
-      <div class="blogdate">
-        <span>Nov 5</span>
-      </div>
-      <div class="blogtitle">
-        <a href="/blog/opensource_ridezap/">Open sourcing Ridezap</a>
       </div>
     </div>
   
