--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <div class="thumbnail">
       <a href="/projects/dmca/">
         <div class="overlay">
-          <span><h3>DMCA</h3></span>
+          <span>
+            <h3>DMCA</h3>
+          </span>
         </div>
 
         <img class="framed_pic" src="/assets/images/dmca-thumb.png"/>
@@ -41,7 +43,9 @@
     <div class="thumbnail">
       <a href="/projects/ridezap/">
         <div class="overlay">
-          <span><h3>RideZap</h3></span>
+          <span>
+            <h3>RideZap</h3>
+          </span>
         </div>
         <img class="framed_pic" src="/assets/images/ridezap-thumb.png"/>
       </a>
@@ -50,7 +54,9 @@
     <div class="thumbnail">
       <a href="/projects/reglib/">
         <div class="overlay">
-          <span><h3>Reglib</h3></span>
+          <span>
+            <h3>Reglib</h3>
+          </span>
         </div>
         <img class="framed_pic" src="/assets/images/classes-thumb.png"/>
       </a>
@@ -59,7 +65,9 @@
     <div class="thumbnail">
       <a href="/projects/subway/">
         <div class="overlay">
-          <span><h3>Subway</h3></span>
+          <span>
+            <h3>Subway</h3>
+          </span>
         </div>
         <img class="framed_pic" src="/assets/images/subway-thumb.png"/>
       </a>
