Update projects and text on about page

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <div class="section" style="">
   <h1>Hi I'm David</h1>
-  <img src="/assets/images/circle-dj.png" style="float: left; border-radius: 60px; margin: 15px 30px 0px 0px;"></img>
+  <img src="/assets/images/circle-dj.png" style="float: left; border-radius: 200px; margin: 15px 30px 0px 0px;"></img>
   <p>I create applications on the web. Right now my main focus is working for <a href="http://emberex.com/">Emberex</a>, where I do a mix of frontend and backend development.
-  I also spent time building <a href="http://www.ridezap.com">RideZap</a> and <a href="https://github.com/thedjpetersen/subway">Subway</a>.
+  I also spent time building <a href="/projects/ridezap/">RideZap</a> and <a href="https://github.com/thedjpetersen/subway">Subway</a>.
 </div>
 
 <div class="section">
@@ -36,7 +36,7 @@
           </span>
         </div>
 
-        <img class="framed_pic" src="/assets/images/dmca-thumb.png"/>
+        <img src="/assets/images/dmca-thumb.png"/>
       </a>
     </div>
 
@@ -47,7 +47,7 @@
             <h3>RideZap</h3>
           </span>
         </div>
-        <img class="framed_pic" src="/assets/images/ridezap-thumb.png"/>
+        <img src="/assets/images/ridezap-thumb.png"/>
       </a>
     </div>
 
@@ -58,7 +58,7 @@
             <h3>Reglib</h3>
           </span>
         </div>
-        <img class="framed_pic" src="/assets/images/classes-thumb.png"/>
+        <img src="/assets/images/classes-thumb.png"/>
       </a>
     </div>
 
@@ -69,7 +69,7 @@
             <h3>Subway</h3>
           </span>
         </div>
-        <img class="framed_pic" src="/assets/images/subway-thumb.png"/>
+        <img src="/assets/images/subway-thumb.png"/>
       </a>
     </div>
   </div>
@@ -79,47 +79,47 @@
   <h2 style="margin-bottom: 20px">Recent Thoughts</h2>
   
     <div class="blogpost">
-      <div class="blogdate">
-        <span>Jul 24</span>
-      </div>
       <div class="blogtitle">
         <a href="/blog/premature_optimization/">Being performance minded while avoiding premature optimization</a>
       </div>
-    </div>
-  
-    <div class="blogpost">
       <div class="blogdate">
         <span>Jul 24</span>
       </div>
+    </div>
+  
+    <div class="blogpost">
       <div class="blogtitle">
         <a href="/blog/november_dreaming/">Dreaming the November 2011 edition</a>
       </div>
+      <div class="blogdate">
+        <span>Jul 24</span>
+      </div>
     </div>
   
     <div class="blogpost">
-      <div class="blogdate">
-        <span>Jul 11</span>
-      </div>
       <div class="blogtitle">
         <a href="/blog/opensource_ridezap/">Open sourcing Ridezap</a>
       </div>
-    </div>
-  
-    <div class="blogpost">
       <div class="blogdate">
         <span>Jul 11</span>
       </div>
+    </div>
+  
+    <div class="blogpost">
       <div class="blogtitle">
         <a href="/blog/startup_school/">A recap of my time at Startup School 2011</a>
+      </div>
+      <div class="blogdate">
+        <span>Jul 11</span>
       </div>
     </div>
   
     <div class="blogpost">
-      <div class="blogdate">
-        <span>Jun 4</span>
-      </div>
       <div class="blogtitle">
         <a href="/blog/comparing_webchat_options/">Comparing web chat clients</a>
+      </div>
+      <div class="blogdate">
+        <span>Jun 4</span>
       </div>
     </div>
   
