--- a/about/index.html
+++ b/about/index.html
@@ -15,13 +15,28 @@
       
       <h1>Eat.Sleep.Develop</h1>
 
-<p>My name is David Petersen. I live in rainy Corvallis Oregon. I enjoy soccer, traveling, and cooking.</p>
+<p>My name is David Petersen. I live in rainy Seattle Wasington. 
+I enjoy soccer, traveling, and cooking.</p>
 
-<p>I love to dream about traveling, learning, and creating. I was fortunate enough to be able to spend the last year in France traveling and working. The chance to live in Paris for 6 months was truely eye opening for me. I had never been in a city that had a heartbeat of its own. Adjusting to a new culture was a wonderful experience for me. I fell in love with the food, <i>l'art de vivre</i>, and was fortunate to bring back a girlfriend as well.</p>
+<p>I love traveling, learning, and creating. I was fortunate enough 
+to be able to spend a year in France traveling and working. Adjusting 
+to a new culture was a wonderful experience for me. I fell in love with 
+the food, <i>l'art de vivre</i>, and was fortunate to bring back a 
+girlfriend(now my wife) as well.</p>
 
-<p>I have found that web is a means of creative outlet for me. I started learning HTML and CSS several years ago and have just been recently introduced to Ruby on Rails and Django. Both of these frameworks have turned out to be an excellent means of turning ideas quickly into reality. This is what I have found myself to being truely passionate about, being able to find a problem with the world and try to address it using technology. I have began to enjoy working more with Ruby on Rails, but I also work with Django for work. I don't feel tightly bound to one programming language or another, I am somewhat of a language agnostic, even though I do tend to drift toward python for most scripting projects.</p>
+<p>I have found that web is a means of creative outlet for me. 
+I started learning HTML and CSS several years ago and have developed a love of trying different 
+web frameworks. I am always on the search for find the means of turning ideas quickly 
+into reality. This is what I have found myself to being truely passionate about, 
+being able to find a problem with the world and try to address it using technology. I don't 
+feel tightly bound to one programming language or another, I want to program in the most 
+terse and simple way as possible.</p>
 
-<p>This website will serve as a outlet for my portfolio and my thoughs on programming. I am also open to work as a freelancer on your next project.</p>
+<p>This website will serve as a outlet for my portfolio and my thoughs on programming.</p>
+
+<p><em><strong>More: </strong>I am looking for work both either full time basis or as a freelancer 
+if you are interested in hiring me be sure to look at my 
+<a href="/resume.pdf">Resume</a> or <a href="https://github.com/thedjpetersen">Github profile.</a></em></p>
 
 <img class="framed_pic" src="/assets/images/me.jpg"/>
       
