New playground example

--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>David Petersen - About</title>
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/coderay.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/prettify.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/sunburst.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="http://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css">
     
@@ -38,7 +39,7 @@ terse and simple way as possible.</p>
 if you are interested in hiring me be sure to look at my 
 <a href="/resume.pdf">Resume</a> or <a href="https://github.com/thedjpetersen">Github profile.</a></em></p>
 
-<img class="framed_pic" src="/assets/images/me.jpg"/>
+<img class="framed_pic" src="/assets/images/me.jpg">
       
     </div>
     <div id="sidebar">
@@ -80,6 +81,7 @@ if you are interested in hiring me be sure to look at my
     })();
 
   </script>
+  <script type="text/javascript" src="/assets/javascripts/prettify.js"></script>
   
   </body>
 </html>
