--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>David Petersen - </title>
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/coderay.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/prettify.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/sunburst.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="http://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css">
     
@@ -21,7 +22,6 @@
   <p>Email: <a href="mailto:davjpetersenr@gmail.com">davjpetersen@gmail.com</a></p>
   <p>Phone: 541-203-0228</p>
 </div>
-
       
     </div>
     <div id="sidebar">
@@ -63,6 +63,7 @@
     })();
 
   </script>
+  <script type="text/javascript" src="/assets/javascripts/prettify.js"></script>
   
   </body>
 </html>
