--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>David Petersen - Home</title>
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/coderay.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/prettify.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/sunburst.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="http://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css">
     
@@ -19,9 +20,9 @@
 
 <div class="section" style="">
   <h1>Hi I'm David</h1>
-  <img src="/assets/images/circle-dj.png" style="float: left; border-radius: 200px; margin: 15px 30px 0px 0px;"></img>
-  <p>I create applications on the web. Right now my main focus is working for <a href="http://emberex.com/">Emberex</a>, where I do a mix of frontend and backend development.
+  <img src="/assets/images/circle-dj.png" style="float: left; border-radius: 200px; margin: 15px 30px 0px 0px;"><p>I create applications on the web. Right now my main focus is working for <a href="http://emberex.com/">Emberex</a>, where I do a mix of frontend and backend development.
   I also spent time building <a href="/projects/ridezap/">RideZap</a> and <a href="https://github.com/thedjpetersen/subway">Subway</a>.
+</p>
 </div>
 
 <div class="section">
@@ -36,8 +37,7 @@
           </span>
         </div>
 
-        <img src="/assets/images/dmca-thumb.png"/>
-      </a>
+        <img src="/assets/images/dmca-thumb.png"></a>
     </div>
 
     <div class="thumbnail">
@@ -47,8 +47,7 @@
             <h3>RideZap</h3>
           </span>
         </div>
-        <img src="/assets/images/ridezap-thumb.png"/>
-      </a>
+        <img src="/assets/images/ridezap-thumb.png"></a>
     </div>
 
     <div class="thumbnail">
@@ -58,8 +57,7 @@
             <h3>Reglib</h3>
           </span>
         </div>
-        <img src="/assets/images/classes-thumb.png"/>
-      </a>
+        <img src="/assets/images/classes-thumb.png"></a>
     </div>
 
     <div class="thumbnail">
@@ -69,8 +67,7 @@
             <h3>Subway</h3>
           </span>
         </div>
-        <img src="/assets/images/subway-thumb.png"/>
-      </a>
+        <img src="/assets/images/subway-thumb.png"></a>
     </div>
   </div>
 </div>
@@ -165,6 +162,7 @@
     })();
 
   </script>
+  <script type="text/javascript" src="/assets/javascripts/prettify.js"></script>
   
   </body>
 </html>
