--- a/playground/index.html
+++ b/playground/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>David Petersen - Playground</title>
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/coderay.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/prettify.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/sunburst.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="http://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css">
     
@@ -25,6 +26,8 @@
     <h3><a href="/playground/language_game/">Google Image Language Game</a></h3>
     <p>A little language game I am working on to play with the Google Image API.</p>
 
+    <h3><a href="/playground/polar_clock/">Polar Clock</a></h3>
+    <p>I really enjoy polar clocks so here is a little one I put together for fun.</p>
       
     </div>
     <div id="sidebar">
@@ -66,6 +69,7 @@
     })();
 
   </script>
+  <script type="text/javascript" src="/assets/javascripts/prettify.js"></script>
   
   </body>
 </html>
