--- a/playground/facebook_music/index.html
+++ b/playground/facebook_music/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>David Petersen - Facebook Playlister</title>
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/coderay.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/prettify.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/sunburst.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="http://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css">
     
@@ -25,15 +26,12 @@
     </div>
     <div id="control-panel" style="padding:10px"></div>
     <div id="friends_input">
-      <input id="friends_autocomplete"/>
-    </div>
+      <input id="friends_autocomplete">
+</div>
   </div>
   <div id="playlist_titles" style="width:200px; height:400px; overflow:scroll; float:right;">
   </div>
 </div>
-
-
-
       
     </div>
     <div id="sidebar">
@@ -75,6 +73,7 @@
     })();
 
   </script>
+  <script type="text/javascript" src="/assets/javascripts/prettify.js"></script>
   
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js"></script>
