Update project page - and menu letter spacing

--- a/playground/polar_clock/index.html
+++ b/playground/polar_clock/index.html
@@ -18,7 +18,7 @@
 
       
       <canvas id="canvas1" width="400" height="400"></canvas><p>I have been playing around with making a simple polar clock lately and this is the result.
-I really enjoy the visual representation of time.</p>
+I really enjoy visual representations of time. Here is the source if you are interested:</p>
 <pre class="prettyprint">
   var can = document.getElementById('canvas1');
   var ctx = can.getContext('2d');
