Adding amazon post and notepanda

--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
   
     <div class="blogpost">
       <div class="blogtitle">
+        <a href="/blog/joining_amazon/">Joining Amazon</a>
+      </div>
+      <div class="blogdate">
+        <span>Sep 24</span>
+      </div>
+    </div>
+  
+    <div class="blogpost">
+      <div class="blogtitle">
         <a href="/blog/premature_optimization/">Being performance minded while avoiding premature optimization</a>
       </div>
       <div class="blogdate">
@@ -108,15 +117,6 @@
       </div>
       <div class="blogdate">
         <span>Jul 11</span>
-      </div>
-    </div>
-  
-    <div class="blogpost">
-      <div class="blogtitle">
-        <a href="/blog/comparing_webchat_options/">Comparing web chat clients</a>
-      </div>
-      <div class="blogdate">
-        <span>Jun 4</span>
       </div>
     </div>
   
