Add notepanda blog post

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   
     <div class="blogpost">
       <div class="blogtitle">
-        <a href="/blog/notepanda/">Starting NotePanda.</a>
+        <a href="/blog/notepanda/">Starting notepanda</a>
       </div>
       <div class="blogdate">
         <span>Sep 24</span>
